--- a/PUBLIC/style.css
+++ b/PUBLIC/style.css
@@ -564,6 +564,10 @@ video {
   position: absolute;
 }
 
+.m-2{
+  margin: 0.5rem;
+}
+
 .mt-16{
   margin-top: 4rem;
 }
@@ -673,6 +677,27 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-bl-full{
+  border-bottom-left-radius: 9999px;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
+.border-t-4{
+  border-top-width: 4px;
+}
+
+.border-dotted{
+  border-style: dotted;
+}
+
+.border-red-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
 .bg-amber-50{
   --tw-bg-opacity: 1;
   background-color: rgb(255 251 235 / var(--tw-bg-opacity));
@@ -686,6 +711,11 @@ video {
 .bg-orange-500{
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+}
+
+.bg-slate-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
 .bg-violet-900{
