--- a/Projects/Neomorphism Calculator/style.css
+++ b/Projects/Neomorphism Calculator/style.css
@@ -60,7 +60,7 @@ body{
 }
 
 .button span:active {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1), -5px -5px 20px #fff;
+    box-shadow: 5px 5px 10px rgba(240, 238, 238, 0.1), -5px -5px 10px rgb(240, 238, 238);
     color: #f44335;
 }
 
@@ -157,5 +157,10 @@ span#clear:clear{
     background-color: #edf1f4;
     border: 2px solid #333;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.25), -5px -5px 10px rgba(255,255,255,0.25);
+}
+
+
+.dark .button span:active {
+    box-shadow: 3px 3px 5px rgba(0,0,0, 0.25), -3px -3px 5px rgba(255,255,255,0.1);
 }
 
