--- a/Projects/Quiz Application/style.css
+++ b/Projects/Quiz Application/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-color: #ec3c14;
+    background-color: #112240;
 }
 
 ::selection{
@@ -91,14 +91,12 @@ body{
 
 }
 
-
 .info-box .button button {
     margin: 0 5px;
     height: 40px;
     width: 100px;
     font-size: 16px;
     font-weight: 500;
-    cursor: pointer;
     border: none;
     outline: none;
     border-radius: 5px;
@@ -106,6 +104,7 @@ body{
     transition: all 0.3s ease;
     background-color: #306af0;
     color: aliceblue;
+    cursor: pointer;
 
 }
 
@@ -207,7 +206,6 @@ section{
     transition: all 0.3s ease;
     align-items: center;
     justify-content: space-between;
-
 }
 
 .option:last-child{
